# django_locallibrary

./: .gitignore  pyproject.toml
catalog/: admin.py  models.py
catalog/fixtures/: populatedb.json
catalog/migrations/: 0001_initial.py  0002_author_date_of_death.py
catalog/onprogress/: populatedb.json
locallibrary/: settings.py
