[tool.poetry]
name = "locallibrary"
version = "0.1.0"
description = ""
authors = ["Marco <m_uno_p@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
mysqlclient = "^2.1.1"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
